more complicated than i first thought

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -9,6 +9,13 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_modules"
 
 vars:
+  shopify_database: 'singular-vector-135519'
+  # shopify_schema: shopify_custom_app_test6 # fivetran_gql_test
+  shopify_schema: shopify_old_test
+  shopify_using_fulfillment_event: true # FALSE by default.
+  # shopify_gql_using_fulfillment_event: true
+  shopify_api: rest
+  # shopify_api: graphql
   # Uncomment when regenerating docs
   # shopify_using_fulfillment_event: true # @docs-include
   # shopify_using_all_metafields: true # @docs-include
@@ -19,111 +26,111 @@ vars:
   # shopify_gql_using_fulfillment_tracking_info: true # @docs-include
   # shopify_gql_using_product_variant_media: true # @docs-include
   
-  shopify_schema: shopify_integration_tests
-  shopify_api_override: rest
+  # shopify_schema: shopify_integration_tests
+  # shopify_api_override: rest
 
-  shopify:
-    shopify_customer_identifier: "shopify_customer_data"
-    shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
-    shopify_order_line_identifier: "shopify_order_line_data"
-    shopify_order_identifier: "shopify_order_data"
-    shopify_product_identifier: "shopify_product_data"
-    shopify_order_adjustment_identifier: "shopify_order_adjustment_data"
-    shopify_product_variant_identifier: "shopify_product_variant_data"
-    shopify_refund_identifier: "shopify_refund_data"
-    shopify_transaction_identifier: "shopify_transaction_data"
-    shopify_abandoned_checkout_identifier: "shopify_abandoned_checkout_data"
-    shopify_collection_product_identifier: "shopify_collection_product_data"
-    shopify_collection_identifier: "shopify_collection_data"
-    shopify_customer_tag_identifier: "shopify_customer_tag_data"
-    shopify_discount_allocation_identifier: "shopify_discount_allocation_data"
-    shopify_discount_application_identifier: "shopify_discount_application_data"
-    shopify_discount_code_app_identifier: "shopify_discount_code_app_data"
-    shopify_discount_code_basic_identifier: "shopify_discount_code_basic_data"
-    shopify_discount_code_bxgy_identifier: "shopify_discount_code_bxgy_data"
-    shopify_discount_code_free_shipping_identifier: "shopify_discount_code_free_shipping_data"
-    shopify_discount_redeem_code_identifier: "shopify_discount_redeem_code_data"
-    shopify_fulfillment_identifier: "shopify_fulfillment_data"
-    shopify_inventory_item_identifier: "shopify_inventory_item_data"
-    shopify_inventory_level_identifier: "shopify_inventory_level_data"
-    shopify_inventory_quantity_identifier: "shopify_inventory_quantity_data"
-    shopify_location_identifier: "shopify_location_data"
-    shopify_media_identifier: "shopify_media_data"
-    shopify_media_image_identifier: "shopify_media_image_data"
-    shopify_metafield_identifier: "shopify_metafield_data"
-    shopify_order_note_attribute_identifier: "shopify_order_note_attribute_data"
-    shopify_order_shipping_line_identifier: "shopify_order_shipping_line_data"
-    shopify_order_shipping_tax_line_identifier: "shopify_order_shipping_tax_line_data"
-    shopify_order_tag_identifier: "shopify_order_tag_data"
-    shopify_order_url_tag_identifier: "shopify_order_url_tag_data"
-    shopify_product_media_identifier: "shopify_product_media_data"
-    shopify_product_variant_media_identifier: "shopify_product_variant_media_data"
-    shopify_product_tag_identifier: "shopify_product_tag_data"
-    shopify_shop_identifier: "shopify_shop_data"
-    shopify_tender_transaction_identifier: "shopify_tender_transaction_data"
-    shopify_abandoned_checkout_discount_code_identifier: "shopify_abandoned_checkout_discount_code_data"
-    shopify_order_discount_code_identifier: "shopify_order_discount_code_data"
-    shopify_abandoned_checkout_shipping_line_identifier: "shopify_abandoned_checkout_shipping_line_data"
-    shopify_fulfillment_event_identifier: "shopify_fulfillment_event_data"
-    shopify_tax_line_identifier: "shopify_tax_line_data"
+  # shopify:
+  #   shopify_customer_identifier: "shopify_customer_data"
+  #   shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
+  #   shopify_order_line_identifier: "shopify_order_line_data"
+  #   shopify_order_identifier: "shopify_order_data"
+  #   shopify_product_identifier: "shopify_product_data"
+  #   shopify_order_adjustment_identifier: "shopify_order_adjustment_data"
+  #   shopify_product_variant_identifier: "shopify_product_variant_data"
+  #   shopify_refund_identifier: "shopify_refund_data"
+  #   shopify_transaction_identifier: "shopify_transaction_data"
+  #   shopify_abandoned_checkout_identifier: "shopify_abandoned_checkout_data"
+  #   shopify_collection_product_identifier: "shopify_collection_product_data"
+  #   shopify_collection_identifier: "shopify_collection_data"
+  #   shopify_customer_tag_identifier: "shopify_customer_tag_data"
+  #   shopify_discount_allocation_identifier: "shopify_discount_allocation_data"
+  #   shopify_discount_application_identifier: "shopify_discount_application_data"
+  #   shopify_discount_code_app_identifier: "shopify_discount_code_app_data"
+  #   shopify_discount_code_basic_identifier: "shopify_discount_code_basic_data"
+  #   shopify_discount_code_bxgy_identifier: "shopify_discount_code_bxgy_data"
+  #   shopify_discount_code_free_shipping_identifier: "shopify_discount_code_free_shipping_data"
+  #   shopify_discount_redeem_code_identifier: "shopify_discount_redeem_code_data"
+  #   shopify_fulfillment_identifier: "shopify_fulfillment_data"
+  #   shopify_inventory_item_identifier: "shopify_inventory_item_data"
+  #   shopify_inventory_level_identifier: "shopify_inventory_level_data"
+  #   shopify_inventory_quantity_identifier: "shopify_inventory_quantity_data"
+  #   shopify_location_identifier: "shopify_location_data"
+  #   shopify_media_identifier: "shopify_media_data"
+  #   shopify_media_image_identifier: "shopify_media_image_data"
+  #   shopify_metafield_identifier: "shopify_metafield_data"
+  #   shopify_order_note_attribute_identifier: "shopify_order_note_attribute_data"
+  #   shopify_order_shipping_line_identifier: "shopify_order_shipping_line_data"
+  #   shopify_order_shipping_tax_line_identifier: "shopify_order_shipping_tax_line_data"
+  #   shopify_order_tag_identifier: "shopify_order_tag_data"
+  #   shopify_order_url_tag_identifier: "shopify_order_url_tag_data"
+  #   shopify_product_media_identifier: "shopify_product_media_data"
+  #   shopify_product_variant_media_identifier: "shopify_product_variant_media_data"
+  #   shopify_product_tag_identifier: "shopify_product_tag_data"
+  #   shopify_shop_identifier: "shopify_shop_data"
+  #   shopify_tender_transaction_identifier: "shopify_tender_transaction_data"
+  #   shopify_abandoned_checkout_discount_code_identifier: "shopify_abandoned_checkout_discount_code_data"
+  #   shopify_order_discount_code_identifier: "shopify_order_discount_code_data"
+  #   shopify_abandoned_checkout_shipping_line_identifier: "shopify_abandoned_checkout_shipping_line_data"
+  #   shopify_fulfillment_event_identifier: "shopify_fulfillment_event_data"
+  #   shopify_tax_line_identifier: "shopify_tax_line_data"
 
-    shopify_gql_abandoned_checkout_identifier: "shopify_gql_abandoned_checkout_data"
-    shopify_gql_collection_product_identifier: "shopify_gql_collection_product_data"
-    shopify_gql_collection_identifier: "shopify_gql_collection_data"
-    shopify_gql_customer_identifier: "shopify_gql_customer_data"
-    shopify_gql_customer_tag_identifier: "shopify_gql_customer_tag_data"
-    shopify_gql_discount_allocation_identifier: "shopify_gql_discount_allocation_data"
-    shopify_gql_discount_application_identifier: "shopify_gql_discount_application_data"
-    shopify_gql_discount_code_app_identifier: "shopify_gql_discount_code_app_data"
-    shopify_gql_discount_code_basic_identifier: "shopify_gql_discount_code_basic_data"
-    shopify_gql_discount_code_bxgy_identifier: "shopify_gql_discount_code_bxgy_data"
-    shopify_gql_discount_code_free_shipping_identifier: "shopify_gql_discount_code_free_shipping_data"
-    shopify_gql_discount_redeem_code_identifier: "shopify_gql_discount_redeem_code_data"
-    shopify_gql_fulfillment_identifier: "shopify_gql_fulfillment_data"
-    shopify_gql_inventory_item_identifier: "shopify_gql_inventory_item_data"
-    shopify_gql_inventory_level_identifier: "shopify_gql_inventory_level_data"
-    shopify_gql_inventory_quantity_identifier: "shopify_gql_inventory_quantity_data"
-    shopify_gql_location_identifier: "shopify_gql_location_data"
-    shopify_gql_media_identifier: "shopify_gql_media_data"
-    shopify_gql_media_image_identifier: "shopify_gql_media_image_data"
-    shopify_gql_metafield_identifier: "shopify_gql_metafield_data"
-    shopify_gql_order_identifier: "shopify_gql_order_data"
-    shopify_gql_order_adjustment_identifier: "shopify_gql_order_adjustment_data"
-    shopify_gql_order_line_identifier: "shopify_gql_order_line_data"
-    shopify_gql_order_line_refund_identifier: "shopify_gql_order_line_refund_data"
-    shopify_gql_refund_line_item_identifier: "shopify_gql_refund_line_item_data"
-    shopify_gql_order_note_attribute_identifier: "shopify_gql_order_note_attribute_data"
-    shopify_gql_order_custom_attribute_identifier: "shopify_gql_order_custom_attribute_data"
-    shopify_gql_order_shipping_line_identifier: "shopify_gql_order_shipping_line_data"
-    shopify_gql_order_shipping_tax_line_identifier: "shopify_gql_order_shipping_tax_line_data"
-    shopify_gql_order_tag_identifier: "shopify_gql_order_tag_data"
-    shopify_gql_product_identifier: "shopify_gql_product_data"
-    shopify_gql_product_media_identifier: "shopify_gql_product_media_data"
-    shopify_gql_product_variant_media_identifier: "shopify_gql_product_variant_media_data"
-    shopify_gql_product_variant_identifier: "shopify_gql_product_variant_data"
-    shopify_gql_product_tag_identifier: "shopify_gql_product_tag_data"
-    shopify_gql_shop_identifier: "shopify_gql_shop_data"
-    shopify_gql_tender_transaction_identifier: "shopify_gql_tender_transaction_data"
-    shopify_gql_transaction_identifier: "shopify_gql_transaction_data"
-    shopify_gql_abandoned_checkout_discount_code_identifier: "shopify_gql_abandoned_checkout_discount_code_data"
-    shopify_gql_order_discount_code_identifier: "shopify_gql_order_discount_code_data"
-    shopify_gql_fulfillment_event_identifier: "shopify_gql_fulfillment_event_data"
-    shopify_gql_tax_line_identifier: "shopify_gql_tax_line_data"
-    shopify_gql_order_line_tax_line_identifier: "shopify_gql_order_line_tax_line_data"
-    shopify_gql_fulfillment_tracking_info_identifier: "shopify_gql_fulfillment_tracking_info_data"
-    shopify_gql_fulfillment_order_line_item_identifier: "shopify_gql_fulfillment_order_line_item_data"
-    shopify_gql_customer_visit_identifier: "shopify_gql_customer_visit_data"
-    shopify_gql_customer_address_identifier: "shopify_gql_customer_address_data"
-    shopify_gql_collection_rule_identifier: "shopify_gql_collection_rule_data"
-    shopify_gql_refund_identifier: "shopify_gql_refund_data"
+  #   shopify_gql_abandoned_checkout_identifier: "shopify_gql_abandoned_checkout_data"
+  #   shopify_gql_collection_product_identifier: "shopify_gql_collection_product_data"
+  #   shopify_gql_collection_identifier: "shopify_gql_collection_data"
+  #   shopify_gql_customer_identifier: "shopify_gql_customer_data"
+  #   shopify_gql_customer_tag_identifier: "shopify_gql_customer_tag_data"
+  #   shopify_gql_discount_allocation_identifier: "shopify_gql_discount_allocation_data"
+  #   shopify_gql_discount_application_identifier: "shopify_gql_discount_application_data"
+  #   shopify_gql_discount_code_app_identifier: "shopify_gql_discount_code_app_data"
+  #   shopify_gql_discount_code_basic_identifier: "shopify_gql_discount_code_basic_data"
+  #   shopify_gql_discount_code_bxgy_identifier: "shopify_gql_discount_code_bxgy_data"
+  #   shopify_gql_discount_code_free_shipping_identifier: "shopify_gql_discount_code_free_shipping_data"
+  #   shopify_gql_discount_redeem_code_identifier: "shopify_gql_discount_redeem_code_data"
+  #   shopify_gql_fulfillment_identifier: "shopify_gql_fulfillment_data"
+  #   shopify_gql_inventory_item_identifier: "shopify_gql_inventory_item_data"
+  #   shopify_gql_inventory_level_identifier: "shopify_gql_inventory_level_data"
+  #   shopify_gql_inventory_quantity_identifier: "shopify_gql_inventory_quantity_data"
+  #   shopify_gql_location_identifier: "shopify_gql_location_data"
+  #   shopify_gql_media_identifier: "shopify_gql_media_data"
+  #   shopify_gql_media_image_identifier: "shopify_gql_media_image_data"
+  #   shopify_gql_metafield_identifier: "shopify_gql_metafield_data"
+  #   shopify_gql_order_identifier: "shopify_gql_order_data"
+  #   shopify_gql_order_adjustment_identifier: "shopify_gql_order_adjustment_data"
+  #   shopify_gql_order_line_identifier: "shopify_gql_order_line_data"
+  #   shopify_gql_order_line_refund_identifier: "shopify_gql_order_line_refund_data"
+  #   shopify_gql_refund_line_item_identifier: "shopify_gql_refund_line_item_data"
+  #   shopify_gql_order_note_attribute_identifier: "shopify_gql_order_note_attribute_data"
+  #   shopify_gql_order_custom_attribute_identifier: "shopify_gql_order_custom_attribute_data"
+  #   shopify_gql_order_shipping_line_identifier: "shopify_gql_order_shipping_line_data"
+  #   shopify_gql_order_shipping_tax_line_identifier: "shopify_gql_order_shipping_tax_line_data"
+  #   shopify_gql_order_tag_identifier: "shopify_gql_order_tag_data"
+  #   shopify_gql_product_identifier: "shopify_gql_product_data"
+  #   shopify_gql_product_media_identifier: "shopify_gql_product_media_data"
+  #   shopify_gql_product_variant_media_identifier: "shopify_gql_product_variant_media_data"
+  #   shopify_gql_product_variant_identifier: "shopify_gql_product_variant_data"
+  #   shopify_gql_product_tag_identifier: "shopify_gql_product_tag_data"
+  #   shopify_gql_shop_identifier: "shopify_gql_shop_data"
+  #   shopify_gql_tender_transaction_identifier: "shopify_gql_tender_transaction_data"
+  #   shopify_gql_transaction_identifier: "shopify_gql_transaction_data"
+  #   shopify_gql_abandoned_checkout_discount_code_identifier: "shopify_gql_abandoned_checkout_discount_code_data"
+  #   shopify_gql_order_discount_code_identifier: "shopify_gql_order_discount_code_data"
+  #   shopify_gql_fulfillment_event_identifier: "shopify_gql_fulfillment_event_data"
+  #   shopify_gql_tax_line_identifier: "shopify_gql_tax_line_data"
+  #   shopify_gql_order_line_tax_line_identifier: "shopify_gql_order_line_tax_line_data"
+  #   shopify_gql_fulfillment_tracking_info_identifier: "shopify_gql_fulfillment_tracking_info_data"
+  #   shopify_gql_fulfillment_order_line_item_identifier: "shopify_gql_fulfillment_order_line_item_data"
+  #   shopify_gql_customer_visit_identifier: "shopify_gql_customer_visit_data"
+  #   shopify_gql_customer_address_identifier: "shopify_gql_customer_address_data"
+  #   shopify_gql_collection_rule_identifier: "shopify_gql_collection_rule_data"
+  #   shopify_gql_refund_identifier: "shopify_gql_refund_data"
 
 dispatch:
   - macro_namespace: dbt_utils
     search_order: ['spark_utils', 'dbt_utils']
 
 models:
-  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
-  # +schema: "shopify_{{ var('directed_schema','dev') }}" ## To be used for validation tests
+  # +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
+  +schema: "shopify_{{ var('directed_schema','dev') }}" ## To be used for validation tests
 
 seeds:
   shopify_integration_tests:
