--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -173,7 +173,7 @@ supported_vars:
     display_name: "Aggregated Inventory States"
 
   shopify__calendar_start_date:
-    type: string
+    type: date
     value: "2019-01-01"
     description: "Start date for the window of data included in time-based models (YYYY-MM-DD format)"
     display_name: "Date Range Start"
